--- a/home/templates/home/editorial_board.html
+++ b/home/templates/home/editorial_board.html
@@ -13,7 +13,10 @@
 
     {% block pagemeta %}
 
-	<title>Amentojourn</title>
+	<title>Editorial Board | Word Astra Journals</title>
+    <meta name="description" content="Meet the esteemed editorial board of Word Astra Journals, consisting of leading scholars and experts ensuring the highest academic publishing standards.">
+    <meta name="keywords" content="editorial board, journal editors, academic publishing, research experts, Word Astra Journals">
+    <meta name="robots" content="index, follow">
 
     {% endblock pagemeta %}
 
