--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1224,7 +1224,7 @@
 											<div class="item">
 												<div class="sj-upcomingbook">
 													<figure class="sj-upcomingbookimg">
-														<img src="{% static 'images/comingbooks/img-01.jpg' %}" alt="image description">
+														<img src="{% static 'images/gjmret.jpeg' %}" alt="image description">
 													</figure>
 													<div class="sj-postcontent">
 														<h3><a href="javascript:void(0);">Global Journal of Modern Research and Emerging Trends (GJ-MRET)</a></h3>
