--- a/home/templates/home/publication_policies.html
+++ b/home/templates/home/publication_policies.html
@@ -13,7 +13,10 @@
 
     {% block pagemeta %}
 
-	<title>Amentojourn</title>
+	<title>Publication Policies | Word Astra Journals</title>
+    <meta name="description" content="Explore Word Astra Journals' publication policies, ensuring transparency, ethical standards, and rigorous peer review for high-quality academic research.">
+    <meta name="keywords" content="publication policies, research ethics, peer review, academic publishing, open access, Word Astra Journals">
+    <meta name="robots" content="index, follow">
 
     {% endblock pagemeta %}
 
