--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1440,8 +1440,8 @@
 										<ul>
 											<li><i class="fas fa-home"></i><address>128, Divja Verba, Municipality of Dragash, Serbia, RS (SRB) Southern Europe. </address></li>
 											<li><a href="tel:+2347026911259"><i class="fas fa-phone"></i><span>+2347026911259, +2347038603421</span></a></li>
-											<li><a href="mailto:wordastrapublisher@gmail.com"><i class="fas fa-envelope"></i><span>wordastrapublisher@gmail.com</span></a></li>
-											<li><a href="mailto:wordastrajournals@gmail.com"><i class="fas fa-envelope"></i><span>wordastrajournals@gmail.com</span></a></li>
+											<li><a href="mailto:wordastrapublisher@gmail.com"><i class="fas fa-envelope"></i><span style="text-transform: lowercase;">wordastrapublisher@gmail.com</span></a></li>
+											<li><a href="mailto:wordastrajournals@gmail.com"><i class="fas fa-envelope"></i><span style="text-transform: lowercase;">wordastrajournals@gmail.com</span></a></li>
 										</ul>
 									</div>
 								</div>
