--- a/home/templates/home/publication_policies.html
+++ b/home/templates/home/publication_policies.html
@@ -270,7 +270,7 @@
                                                 
                                                 <p>Authors are required to provide accurate affiliations, disclose potential conflicts of interest, and comply with our plagiarism policies. Detailed formatting instructions, reference styles, and submission procedures can be found below.</p>
                                                 
-                                                <p>For further inquiries or assistance regarding manuscript submission, please <a href="contact.html">Contact Us</a></p>
+                                                <p>For further inquiries or assistance regarding manuscript submission, please <a href="#contactAstra">Contact Us</a></p>
                                             </div>
 										</div>
 										<div class="sj-ourhistory sj-sectioninnerspace">
@@ -379,41 +379,6 @@
 											<div class="sj-description">
                                                 <p>Authors must obtain permission for any copyrighted materials used in their manuscript.</p>
                                                 <p>The journal holds the right to edit and format accepted manuscripts for clarity and consistency.</p>
-											</div>
-										</div>
-
-
-
-										<div class="sj-sectionmanuscript sj-sectioninnerspace">
-											<div class="sj-borderheading">
-												<h3>Sections of the Manuscript</h3>
-											</div>
-											<div class="sj-manuscritp">
-												<figure class="sj-manuscriptimg"><img src="images/authorguideline/img-01.jpg" alt="image description"></figure>
-												<div class="sj-manuscriptcontent">
-													<h3>Abstract</h3>
-													<div class="sj-description">
-														<p>Adipisicing elit sed dotaeu eiusmod tempo acididunt utnalo labore aietaium dolore magna aliqua enim adminim veniam quis nosi trude exercitation ullamco laborisnisi ut aliquipex eaeumodo consequat aute iruredolor enderit in voluptate velit esse cillum dolore eu fugiat.</p>
-													</div>
-												</div>
-											</div>
-											<div class="sj-manuscritp">
-												<figure class="sj-manuscriptimg"><img src="images/authorguideline/img-02.jpg" alt="image description"></figure>
-												<div class="sj-manuscriptcontent">
-													<h3>Discussion</h3>
-													<div class="sj-description">
-														<p>Adipisicing elit sed dotaeu eiusmod tempo acididunt utnalo labore aietaium dolore magna aliqua enim adminim veniam quis nosi trude exercitation ullamco laborisnisi ut aliquipex eaeumodo consequat aute iruredolor enderit in voluptate velit esse cillum dolore eu fugiat.</p>
-													</div>
-												</div>
-											</div>
-											<div class="sj-manuscritp">
-												<figure class="sj-manuscriptimg"><img src="images/authorguideline/img-03.jpg" alt="image description"></figure>
-												<div class="sj-manuscriptcontent">
-													<h3>Acknowledgments</h3>
-													<div class="sj-description">
-														<p>Adipisicing elit sed dotaeu eiusmod tempo acididunt utnalo labore aietaium dolore magna aliqua enim adminim veniam quis nosi trude exercitation ullamco laborisnisi ut aliquipex eaeumodo consequat aute iruredolor enderit in voluptate velit esse cillum dolore eu fugiat.</p>
-													</div>
-												</div>
 											</div>
 										</div>
 									</div>
