--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1227,7 +1227,7 @@
 														<img src="{% static 'images/gjmret.jpeg' %}" alt="image description">
 													</figure>
 													<div class="sj-postcontent">
-														<h3><a href="javascript:void(0);">Global Journal of Modern Research and Emerging Trends (GJ-MRET)</a></h3>
+														<h3><a href="javascript:void(0);" style="text-transform: none;">Global Journal of Modern Research and Emerging Trends (GJ-MRET)</a></h3>
 													</div>
 												</div>
 											</div>
@@ -1237,7 +1237,7 @@
 														<img src="{% static 'images/comingbooks/img-02.jpg' %}" alt="image description">
 													</figure>
 													<div class="sj-postcontent">
-														<h3><a href="javascript:void(0);">International journal of public relations and social sciences (IJPRSS)</a></h3>
+														<h3><a href="javascript:void(0);" style="text-transform: none;">International Journal of Public Relations and Social Sciences (IJPRSS)</a></h3>
 													</div>
 												</div>
 											</div>
